Some more tweaks

--- a/src/book.tex
+++ b/src/book.tex
@@ -243,7 +243,7 @@ pdfkeywords={C64, 6502, Llamasoft, Iridis Alpha, Jeff Minter}%
    [x86masm]{Assembler} % based on the "x86masm" dialect
    % with these extra keywords:
    {morekeywords={.BYTE,LDY,LDX,INC,LDA,BEQ,BNE,JSR,DEY,DEX,PHA,PLA,INY, %
-									STA,SEC,SBC,BCS,EOR,RTS,TXA,ASL,TAY,INX,CPY,TAX,RTI,}} % etc.
+									STA,SEC,SBC,BCS,EOR,RTS,SEI,TXA,ASL,TAY,INX,CPY,TAX,RTI,}} % etc.
 
 
 \definecolor{mGreen}{rgb}{0,0.6,0}
