--- a/src/disassembly.tex
+++ b/src/disassembly.tex
@@ -198,8 +198,8 @@ to start executing whatever is at address \$4000.
               nodes={draw,minimum size=1cm,anchor=center},
               column sep=-\pgflinewidth,row sep=-\pgflinewidth,font=\ttfamily]
               {
-43 & 36 & 34 & 00 & 40 & 41 & 50 & 45 \\
-0315 & 0316 & 0317 & 0318 & 0319 & 031A & 031B & 031C \\
+\icode{43} & \icode{36} & \icode{34} & \icode{00} & \icode{40} & \icode{41} & \icode{50} & \icode{45} \\
+\icode{0315} & \icode{0316} & \icode{0317} & \icode{0318} & \icode{0319} & \icode{031A} & \icode{031B} & \icode{031C} \\
 						  };
       \end{tikzpicture}
     \end{adjustbox}
@@ -291,8 +291,8 @@ address, so we're actually saying \icode{LDA \#\$3E}, i.e. load the value \$3E i
               nodes={draw,minimum size=1cm,anchor=center},
               column sep=-\pgflinewidth,row sep=-\pgflinewidth,font=\ttfamily]
               {
-43 & 36 & 34 & 3E & 6B & 41 & 50 & 45 \\
-0315 & 0316 & 0317 & 0318 & 0319 & 031A & 031B & 031C \\
+\icode{43} & \icode{36} & \icode{34} & \icode{3E} & \icode{6B} & \icode{41} & \icode{50} & \icode{45} \\
+\icode{0315} & \icode{0316} & \icode{0317} & \icode{0318} & \icode{0319} & \icode{031A} & \icode{031B} & \icode{031C} \\
 						  };
       \end{tikzpicture}
     \end{adjustbox}
