--- a/src/titlescreen/tilesheets/charset_tilesheet_$0_bits.tex
+++ b/src/titlescreen/tilesheets/charset_tilesheet_$0_bits.tex
@@ -43,14 +43,14 @@
         \node[matrix of math nodes,anchor=south west,inner sep=0pt,
         nodes={draw,minimum size=1cm,anchor=center},
         column sep=-\pgflinewidth,row sep=-\pgflinewidth]
-        {1 & 1  & 1 & 1 & 1 & 1 & 1 & 1\\
-        0 & 0  & 0 & 0 & 0 & 0 & 0 & 0\\
-        1 & 1  & 1 & 1 & 1 & 1 & 1 & 1\\
-        0 & 0  & 0 & 0 & 0 & 0 & 0 & 0\\
-        0 & 0  & 0 & 0 & 0 & 0 & 0 & 0\\
-        1 & 1  & 1 & 1 & 1 & 1 & 1 & 1\\
-        0 & 0  & 0 & 0 & 0 & 0 & 0 & 0\\
-        1 & 1  & 1 & 1 & 1 & 1 & 1 & 1\\};
+        {\icode{1} & \icode{1}  & \icode{1} & \icode{1} & \icode{1} & \icode{1} & \icode{1} & \icode{1}\\
+        \icode{0} & \icode{0}  & \icode{0} & \icode{0} & \icode{0} & \icode{0} & \icode{0} & \icode{0}\\
+        \icode{1} & \icode{1}  & \icode{1} & \icode{1} & \icode{1} & \icode{1} & \icode{1} & \icode{1}\\
+        \icode{0} & \icode{0}  & \icode{0} & \icode{0} & \icode{0} & \icode{0} & \icode{0} & \icode{0}\\
+        \icode{0} & \icode{0}  & \icode{0} & \icode{0} & \icode{0} & \icode{0} & \icode{0} & \icode{0}\\
+        \icode{1} & \icode{1}  & \icode{1} & \icode{1} & \icode{1} & \icode{1} & \icode{1} & \icode{1}\\
+        \icode{0} & \icode{0}  & \icode{0} & \icode{0} & \icode{0} & \icode{0} & \icode{0} & \icode{0}\\
+        \icode{1} & \icode{1}  & \icode{1} & \icode{1} & \icode{1} & \icode{1} & \icode{1} & \icode{1}\\};
 
           \end{tikzpicture}
         \end{adjustbox}
