--- a/src/titlescreen/titlescreen_color_ram.tex
+++ b/src/titlescreen/titlescreen_color_ram.tex
@@ -489,56 +489,56 @@
               nodes={draw,minimum size=1cm,anchor=center},
               column sep=-\pgflinewidth,row sep=-\pgflinewidth,font=\huge]
               {
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 &
-02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 \\
-08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 &
-08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 \\
-07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 &
-07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 \\
-05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 &
-05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 \\
-0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E &
-0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E \\
-04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 &
-04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 \\
-06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 &
-06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 \\
-01 & 02 & 02 & 08 & 08 & 08 & 07 & 07 & 07 & 05 & 05 & 05 & 0E & 0E & 0E & 07 & 07 & 09 & 01 & 0B & 07 & 03 & 00 & 07 & 02 & 0B & 0B &
-0B & 0B & 0C & 0C & 0C & 0C & 0F & 0F & 0F & 0F & 01 & 01 & 01 \\
-01 & 04 & 00 & 07 & 09 & 0C & 02 & 09 & 05 & 03 & 00 & 0F & 06 & 00 & 0F & 02 & 02 & 08 & 08 & 08 & 07 & 07 & 07 & 05 & 05 & 05 & 0E &
-0E & 0E & 07 & 07 & 09 & 01 & 0B & 07 & 03 & 00 & 07 & 02 & 05 \\
-0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C &
-0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C \\
-01 & 04 & 00 & 07 & 09 & 0C & 02 & 09 & 05 & 03 & 00 & 0F & 06 & 00 & 0F & 02 & 02 & 08 & 08 & 08 & 07 & 07 & 07 & 05 & 05 & 05 & 0E &
-0E & 0E & 07 & 07 & 09 & 01 & 0B & 07 & 03 & 00 & 07 & 02 & 05 \\
-0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C &
-0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C &
-0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C &
-0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C &
-0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C & 0C \\
-01 & 01 & 00 & 01 & 01 & 01 & 01 & 04 & 04 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 00 & 00 & 01 & 01 & 01 & 01 & 00 &
-07 & 07 & 00 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 00 & 02 & 07 & 07 & 05 & 05 & 07 & 07 & 02 & 00 & 00 & 00 & 00 & 00 & 00 & 00 & 01 & 01 & 01 & 01 & 00 & 01 & 05 & 00 & 00 &
-07 & 07 & 00 & 07 & 07 & 04 & 04 & 0E & 0E & 08 & 08 & 0A & 0A \\
-01 & 01 & 00 & 02 & 07 & 07 & 05 & 05 & 07 & 07 & 02 & 00 & 00 & 02 & 02 & 08 & 08 & 07 & 07 & 05 & 05 & 0E & 0E & 04 & 04 & 06 & 06 &
-07 & 07 & 00 & 07 & 07 & 04 & 04 & 0E & 0E & 08 & 08 & 0A & 0A \\
-01 & 01 & 00 & 01 & 01 & 01 & 01 & 04 & 04 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 00 & 00 & 01 & 01 & 01 & 01 & 00 &
-07 & 07 & 00 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} &
+\icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} \\
+\icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} &
+\icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} \\
+\icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} &
+\icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} \\
+\icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} &
+\icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} \\
+\icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} &
+\icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} \\
+\icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} &
+\icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} \\
+\icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} &
+\icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} \\
+\icode{01} & \icode{02} & \icode{02} & \icode{08} & \icode{08} & \icode{08} & \icode{07} & \icode{07} & \icode{07} & \icode{05} & \icode{05} & \icode{05} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{07} & \icode{07} & \icode{09} & \icode{01} & \icode{0B} & \icode{07} & \icode{03} & \icode{00} & \icode{07} & \icode{02} & \icode{0B} & \icode{0B} &
+\icode{0B} & \icode{0B} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0F} & \icode{0F} & \icode{0F} & \icode{0F} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{04} & \icode{00} & \icode{07} & \icode{09} & \icode{0C} & \icode{02} & \icode{09} & \icode{05} & \icode{03} & \icode{00} & \icode{0F} & \icode{06} & \icode{00} & \icode{0F} & \icode{02} & \icode{02} & \icode{08} & \icode{08} & \icode{08} & \icode{07} & \icode{07} & \icode{07} & \icode{05} & \icode{05} & \icode{05} & \icode{0E} &
+\icode{0E} & \icode{0E} & \icode{07} & \icode{07} & \icode{09} & \icode{01} & \icode{0B} & \icode{07} & \icode{03} & \icode{00} & \icode{07} & \icode{02} & \icode{05} \\
+\icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} &
+\icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} \\
+\icode{01} & \icode{04} & \icode{00} & \icode{07} & \icode{09} & \icode{0C} & \icode{02} & \icode{09} & \icode{05} & \icode{03} & \icode{00} & \icode{0F} & \icode{06} & \icode{00} & \icode{0F} & \icode{02} & \icode{02} & \icode{08} & \icode{08} & \icode{08} & \icode{07} & \icode{07} & \icode{07} & \icode{05} & \icode{05} & \icode{05} & \icode{0E} &
+\icode{0E} & \icode{0E} & \icode{07} & \icode{07} & \icode{09} & \icode{01} & \icode{0B} & \icode{07} & \icode{03} & \icode{00} & \icode{07} & \icode{02} & \icode{05} \\
+\icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} &
+\icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} &
+\icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} &
+\icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} &
+\icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} & \icode{0C} \\
+\icode{01} & \icode{01} & \icode{00} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{04} & \icode{04} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{00} & \icode{00} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{00} &
+\icode{07} & \icode{07} & \icode{00} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{00} & \icode{02} & \icode{07} & \icode{07} & \icode{05} & \icode{05} & \icode{07} & \icode{07} & \icode{02} & \icode{00} & \icode{00} & \icode{00} & \icode{00} & \icode{00} & \icode{00} & \icode{00} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{00} & \icode{01} & \icode{05} & \icode{00} & \icode{00} &
+\icode{07} & \icode{07} & \icode{00} & \icode{07} & \icode{07} & \icode{04} & \icode{04} & \icode{0E} & \icode{0E} & \icode{08} & \icode{08} & \icode{0A} & \icode{0A} \\
+\icode{01} & \icode{01} & \icode{00} & \icode{02} & \icode{07} & \icode{07} & \icode{05} & \icode{05} & \icode{07} & \icode{07} & \icode{02} & \icode{00} & \icode{00} & \icode{02} & \icode{02} & \icode{08} & \icode{08} & \icode{07} & \icode{07} & \icode{05} & \icode{05} & \icode{0E} & \icode{0E} & \icode{04} & \icode{04} & \icode{06} & \icode{06} &
+\icode{07} & \icode{07} & \icode{00} & \icode{07} & \icode{07} & \icode{04} & \icode{04} & \icode{0E} & \icode{0E} & \icode{08} & \icode{08} & \icode{0A} & \icode{0A} \\
+\icode{01} & \icode{01} & \icode{00} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{04} & \icode{04} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{00} & \icode{00} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{00} &
+\icode{07} & \icode{07} & \icode{00} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
               };
 
       \end{tikzpicture}
