--- a/src/torus-animation.tex
+++ b/src/torus-animation.tex
@@ -42,7 +42,7 @@ handling each is identical and was only very lightly modified for the final game
     \draw[]
       (frame.north west) rectangle (frame.south east);},
 ]{}
-A Testing Hack
+\subsubsection{A Testing Hack}
 
 In the CheckKeyboardInGame Routine, we find the following:
 \CopyPartialFile{../iridisalpha/src/iridisalpha.asm}{tmp.asm}{7909}{7920}%
