--- a/src/archaeo.tex
+++ b/src/archaeo.tex
@@ -73,13 +73,13 @@ This is what the start of the our \icode{iridis-alpha.tap} file looks like:
               nodes={draw,minimum size=1cm,anchor=center},
               column sep=-\pgflinewidth,row sep=-\pgflinewidth,font=\ttfamily]
               {
-43 & 36 & 34 & 2D & 54 & 41 & 50 & 45 & 2D & 52 & 41 & 57 & 00 & 00 & 00 & 00  \\
-5A & 0A & 08 & 00 & 00 & 5D & 32 & 2F & 30 & 2F & 2F & 30 & 30 & 31 & 30 & 31  \\
-30 & 31 & 31 & 2F & 31 & 31 & 30 & 31 & 30 & 30 & 31 & 30 & 30 & 30 & 31 & 30  \\
-31 & 31 & 30 & 31 & 31 & 30 & 31 & 30 & 30 & 31 & 30 & 31 & 31 & 30 & 30 & 30  \\
-31 & 31 & 31 & 30 & 30 & 31 & 30 & 31 & 31 & 31 & 30 & 30 & 30 & 31 & 31 & 30  \\
-30 & 30 & 31 & 30 & 31 & 30 & 30 & 30 & 31 & 30 & 31 & 31 & 30 & 30 & 30 & 31  \\
-31 & 31 & 30 & 30 & 31 & 30 & 32 & 31 & 30 & 31 & 30 & 30 & 32 & 31 & 30 & 30  \\
+\icode{43} & \icode{36} & \icode{34} & \icode{2D} & \icode{54} & \icode{41} & \icode{50} & \icode{45} & \icode{2D} & \icode{52} & \icode{41} & \icode{57} & \icode{00} & \icode{00} & \icode{00} & \icode{00}  \\
+\icode{5A} & \icode{0A} & \icode{08} & \icode{00} & \icode{00} & \icode{5D} & \icode{32} & \icode{2F} & \icode{30} & \icode{2F} & \icode{2F} & \icode{30} & \icode{30} & \icode{31} & \icode{30} & \icode{31}  \\
+\icode{30} & \icode{31} & \icode{31} & \icode{2F} & \icode{31} & \icode{31} & \icode{30} & \icode{31} & \icode{30} & \icode{30} & \icode{31} & \icode{30} & \icode{30} & \icode{30} & \icode{31} & \icode{30}  \\
+\icode{31} & \icode{31} & \icode{30} & \icode{31} & \icode{31} & \icode{30} & \icode{31} & \icode{30} & \icode{30} & \icode{31} & \icode{30} & \icode{31} & \icode{31} & \icode{30} & \icode{30} & \icode{30}  \\
+\icode{31} & \icode{31} & \icode{31} & \icode{30} & \icode{30} & \icode{31} & \icode{30} & \icode{31} & \icode{31} & \icode{31} & \icode{30} & \icode{30} & \icode{30} & \icode{31} & \icode{31} & \icode{30}  \\
+\icode{30} & \icode{30} & \icode{31} & \icode{30} & \icode{31} & \icode{30} & \icode{30} & \icode{30} & \icode{31} & \icode{30} & \icode{31} & \icode{31} & \icode{30} & \icode{30} & \icode{30} & \icode{31}  \\
+\icode{31} & \icode{31} & \icode{30} & \icode{30} & \icode{31} & \icode{30} & \icode{32} & \icode{31} & \icode{30} & \icode{31} & \icode{30} & \icode{30} & \icode{32} & \icode{31} & \icode{30} & \icode{30}  \\
 						  };
 
       \end{tikzpicture}
@@ -280,19 +280,19 @@ read 202 bytes in total:
               nodes={draw,minimum size=1cm,anchor=center},
               column sep=-\pgflinewidth,row sep=-\pgflinewidth,font=\ttfamily]
               {
-	89 & 88 & 87 & 86 & 85 & 84 & 83 & 82 & 81 & 03 & A7 & 02 & 04 & 03 & 49 & 52 \\
-	49 & 44 & 49 & 53 & 00 & 00 & 00 & 00 & 00 & 00 & 00 & 00 & 00 & 00 & 78 & A9 \\
-	6E & 8D & 06 & DD & A2 & 01 & 20 & D4 & 02 & 26 & F7 & A5 & F7 & C9 & 63 & D0 \\
-	F5 & A0 & 64 & 20 & E7 & 03 & C9 & 63 & F0 & F9 & C4 & F7 & D0 & E8 & 20 & E7 \\
-	03 & C8 & D0 & F6 & C9 & 00 & F0 & D6 & 20 & E7 & 03 & 99 & 2B & 00 & 99 & F9 \\
-	00 & C8 & C0 & 0A & D0 & F2 & A0 & 00 & 84 & 90 & 84 & 02 & 20 & E7 & 03 & 91 \\
-	F9 & 45 & 02 & 85 & 02 & E6 & F9 & D0 & 02 & E6 & FA & A5 & F9 & C5 & 2D & A5 \\
-	FA & E5 & 2E & 90 & E7 & 20 & E7 & 03 & C8 & 84 & C0 & 58 & 18 & A9 & 00 & 8D \\
-	A0 & 02 & 20 & 93 & FC & 20 & 53 & E4 & A5 & F7 & 45 & 02 & 05 & 90 & F0 & 03 \\
-	4C & E2 & FC & A5 & 31 & F0 & 03 & 4C & B9 & 02 & A5 & 32 & F0 & 03 & 6C & 2F \\
-	00 & 20 & 33 & A5 & A2 & 03 & 86 & C6 & BD & F3 & 02 & 9D & 76 & 02 & CA & D0 \\
-	F7 & 4C & E9 & 02 & A9 & 07 & 85 & F8 & 20 & D4 & 02 & 26 & F7 & EE & 20 & D0 \\
-	C6 & F8 & 10 & F4 & A5 & F7 & 60 & 00 & 00 & E4 \\ 
+	\icode{89} & \icode{88} & \icode{87} & \icode{86} & \icode{85} & \icode{84} & \icode{83} & \icode{82} & \icode{81} & \icode{03} & \icode{A7} & \icode{02} & \icode{04} & \icode{03} & \icode{49} & \icode{52} \\
+	\icode{49} & \icode{44} & \icode{49} & \icode{53} & \icode{00} & \icode{00} & \icode{00} & \icode{00} & \icode{00} & \icode{00} & \icode{00} & \icode{00} & \icode{00} & \icode{00} & \icode{78} & \icode{A9} \\
+	\icode{6E} & \icode{8D} & \icode{06} & \icode{DD} & \icode{A2} & \icode{01} & \icode{20} & \icode{D4} & \icode{02} & \icode{26} & \icode{F7} & \icode{A5} & \icode{F7} & \icode{C9} & \icode{63} & \icode{D0} \\
+	\icode{F5} & \icode{A0} & \icode{64} & \icode{20} & \icode{E7} & \icode{03} & \icode{C9} & \icode{63} & \icode{F0} & \icode{F9} & \icode{C4} & \icode{F7} & \icode{D0} & \icode{E8} & \icode{20} & \icode{E7} \\
+	\icode{03} & \icode{C8} & \icode{D0} & \icode{F6} & \icode{C9} & \icode{00} & \icode{F0} & \icode{D6} & \icode{20} & \icode{E7} & \icode{03} & \icode{99} & \icode{2B} & \icode{00} & \icode{99} & \icode{F9} \\
+	\icode{00} & \icode{C8} & \icode{C0} & \icode{0A} & \icode{D0} & \icode{F2} & \icode{A0} & \icode{00} & \icode{84} & \icode{90} & \icode{84} & \icode{02} & \icode{20} & \icode{E7} & \icode{03} & \icode{91} \\
+	\icode{F9} & \icode{45} & \icode{02} & \icode{85} & \icode{02} & \icode{E6} & \icode{F9} & \icode{D0} & \icode{02} & \icode{E6} & \icode{FA} & \icode{A5} & \icode{F9} & \icode{C5} & \icode{2D} & \icode{A5} \\
+	\icode{FA} & \icode{E5} & \icode{2E} & \icode{90} & \icode{E7} & \icode{20} & \icode{E7} & \icode{03} & \icode{C8} & \icode{84} & \icode{C0} & \icode{58} & \icode{18} & \icode{A9} & \icode{00} & \icode{8D} \\
+	\icode{A0} & \icode{02} & \icode{20} & \icode{93} & \icode{FC} & \icode{20} & \icode{53} & \icode{E4} & \icode{A5} & \icode{F7} & \icode{45} & \icode{02} & \icode{05} & \icode{90} & \icode{F0} & \icode{03} \\
+	\icode{4C} & \icode{E2} & \icode{FC} & \icode{A5} & \icode{31} & \icode{F0} & \icode{03} & \icode{4C} & \icode{B9} & \icode{02} & \icode{A5} & \icode{32} & \icode{F0} & \icode{03} & \icode{6C} & \icode{2F} \\
+	\icode{00} & \icode{20} & \icode{33} & \icode{A5} & \icode{A2} & \icode{03} & \icode{86} & \icode{C6} & \icode{BD} & \icode{F3} & \icode{02} & \icode{9D} & \icode{76} & \icode{02} & \icode{CA} & \icode{D0} \\
+	\icode{F7} & \icode{4C} & \icode{E9} & \icode{02} & \icode{A9} & \icode{07} & \icode{85} & \icode{F8} & \icode{20} & \icode{D4} & \icode{02} & \icode{26} & \icode{F7} & \icode{EE} & \icode{20} & \icode{D0} \\
+	\icode{C6} & \icode{F8} & \icode{10} & \icode{F4} & \icode{A5} & \icode{F7} & \icode{60} & \icode{00} & \icode{00} & \icode{E4} \\ 
 						  };
 
       \end{tikzpicture}
@@ -372,13 +372,13 @@ When it arrives it looks like this:
               nodes={draw,minimum size=1cm,anchor=center},
               column sep=-\pgflinewidth,row sep=-\pgflinewidth,font=\ttfamily]
               {
-89 & 88 & 87 & 86 & 85 & 84 & 83 & 82 & 81 & A9 & 80 & 05 & 91 & 4C & EF & F6 \\
-A9 & A7 & 78 & 8D & 28 & 03 & A9 & 02 & 8D & 29 & 03 & 58 & A0 & 00 & 84 & C6 \\
-84 & C0 & 84 & 02 & AD & 11 & D0 & 29 & EF & 8D & 11 & D0 & CA & D0 & FD & 88 \\
-D0 & FA & 78 & 4C & 51 & 03 & AD & 0D & DC & 29 & 10 & F0 & F9 & AD & 0D & DD \\
-8E & 07 & DD & 4A & 4A & A9 & 19 & 8D & 0F & DD & 60 & 20 & 8E & A6 & A9 & 00 \\
-A8 & 91 & 7A & 4C & 74 & A4 & 52 & D5 & 0D & 00 & 00 & 00 & 00 & 00 & 00 & 00 \\
-00 & 00 & 8B & E3 & AE & 02 & 53 \\
+\icode{89} & \icode{88} & \icode{87} & \icode{86} & \icode{85} & \icode{84} & \icode{83} & \icode{82} & \icode{81} & \icode{A9} & \icode{80} & \icode{05} & \icode{91} & \icode{4C} & \icode{EF} & \icode{F6} \\
+\icode{A9} & \icode{A7} & \icode{78} & \icode{8D} & \icode{28} & \icode{03} & \icode{A9} & \icode{02} & \icode{8D} & \icode{29} & \icode{03} & \icode{58} & \icode{A0} & \icode{00} & \icode{84} & \icode{C6} \\
+\icode{84} & \icode{C0} & \icode{84} & \icode{02} & \icode{AD} & \icode{11} & \icode{D0} & \icode{29} & \icode{EF} & \icode{8D} & \icode{11} & \icode{D0} & \icode{CA} & \icode{D0} & \icode{FD} & \icode{88} \\
+\icode{D0} & \icode{FA} & \icode{78} & \icode{4C} & \icode{51} & \icode{03} & \icode{AD} & \icode{0D} & \icode{DC} & \icode{29} & \icode{10} & \icode{F0} & \icode{F9} & \icode{AD} & \icode{0D} & \icode{DD} \\
+\icode{8E} & \icode{07} & \icode{DD} & \icode{4A} & \icode{4A} & \icode{A9} & \icode{19} & \icode{8D} & \icode{0F} & \icode{DD} & \icode{60} & \icode{20} & \icode{8E} & \icode{A6} & \icode{A9} & \icode{00} \\
+\icode{A8} & \icode{91} & \icode{7A} & \icode{4C} & \icode{74} & \icode{A4} & \icode{52} & \icode{D5} & \icode{0D} & \icode{00} & \icode{00} & \icode{00} & \icode{00} & \icode{00} & \icode{00} & \icode{00} \\
+\icode{00} & \icode{00} & \icode{8B} & \icode{E3} & \icode{AE} & \icode{02} & \icode{53} \\
 						  };
 
       \end{tikzpicture}
@@ -452,7 +452,7 @@ Audiogenic and so on. Luigi di Fraia maintains a utility called tapclean that do
 these loaders and thanks to him we have a disassembled version of the loader we've just found on the Iridis Alpha tape. It has the
 quintessentially 1980s moniker 'MegaSave' and as you can see in the listing reproduced below is relatively compact.
 
-\lstinputlisting[caption=The data we have just loaded\, translated back into assembly language. This is the MegaSave loader.,basicstyle=\tiny]
+\lstinputlisting[caption=The data we have just loaded\, translated back into assembly language. This is the MegaSave loader.]
 {src/archaeo/megasave/loader.asm}
 
 What does MegaSave do that makes it so much faster than the default C64 tape loader? The simple answer is that it cuts corners
@@ -548,26 +548,26 @@ This sequence has the catchy name of a 'Sync Train':
               nodes={draw,minimum size=1cm,anchor=center},
               column sep=-\pgflinewidth,row sep=-\pgflinewidth,font=\ttfamily]
               {
-63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 \\
-63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 \\
-63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 \\
-63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 \\
-63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 \\
-63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 \\
-63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 \\
-63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 \\
-63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 & 63 \\
-63 & 63 & 63 & 63 & 63 & 64 & 64 & 65 & 66 & 67 & 68 & 69 & 6A & 6B & 6C & 6D & 6E \\
-6F & 70 & 71 & 72 & 73 & 74 & 75 & 76 & 77 & 78 & 79 & 7A & 7B & 7C & 7D & 7E & 7F \\
-80 & 81 & 82 & 83 & 84 & 85 & 86 & 87 & 88 & 89 & 8A & 8B & 8C & 8D & 8E & 8F & 90 \\
-91 & 92 & 93 & 94 & 95 & 96 & 97 & 98 & 99 & 9A & 9B & 9C & 9D & 9E & 9F & A0 & A1 \\
-A2 & A3 & A4 & A5 & A6 & A7 & A8 & A9 & AA & AB & AC & AD & AE & AF & B0 & B1 & B2 \\
-B3 & B4 & B5 & B6 & B7 & B8 & B9 & BA & BB & BC & BD & BE & BF & C0 & C1 & C2 & C3 \\
-C4 & C5 & C6 & C7 & C8 & C9 & CA & CB & CC & CD & CE & CF & D0 & D1 & D2 & D3 & D4 \\
-D5 & D6 & D7 & D8 & D9 & DA & DB & DC & DD & DE & DF & E0 & E1 & E2 & E3 & E4 & E5 \\
-E6 & E7 & E8 & E9 & EA & EB & EC & ED & EE & EF & F0 & F1 & F2 & F3 & F4 & F5 & F6 \\
-F7 & F8 & F9 & FA & FB & FC & FD & FE & FF & 01 & 00 & 08 & FF & BF & 00 & 00 & 01 \\
-02 & CA & 00 \\
+\icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} \\
+\icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} \\
+\icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} \\
+\icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} \\
+\icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} \\
+\icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} \\
+\icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} \\
+\icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} \\
+\icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} \\
+\icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{63} & \icode{64} & \icode{64} & \icode{65} & \icode{66} & \icode{67} & \icode{68} & \icode{69} & \icode{6A} & \icode{6B} & \icode{6C} & \icode{6D} & \icode{6E} \\
+\icode{6F} & \icode{70} & \icode{71} & \icode{72} & \icode{73} & \icode{74} & \icode{75} & \icode{76} & \icode{77} & \icode{78} & \icode{79} & \icode{7A} & \icode{7B} & \icode{7C} & \icode{7D} & \icode{7E} & \icode{7F} \\
+\icode{80} & \icode{81} & \icode{82} & \icode{83} & \icode{84} & \icode{85} & \icode{86} & \icode{87} & \icode{88} & \icode{89} & \icode{8A} & \icode{8B} & \icode{8C} & \icode{8D} & \icode{8E} & \icode{8F} & \icode{90} \\
+\icode{91} & \icode{92} & \icode{93} & \icode{94} & \icode{95} & \icode{96} & \icode{97} & \icode{98} & \icode{99} & \icode{9A} & \icode{9B} & \icode{9C} & \icode{9D} & \icode{9E} & \icode{9F} & \icode{A0} & \icode{A1} \\
+\icode{A2} & \icode{A3} & \icode{A4} & \icode{A5} & \icode{A6} & \icode{A7} & \icode{A8} & \icode{A9} & \icode{AA} & \icode{AB} & \icode{AC} & \icode{AD} & \icode{AE} & \icode{AF} & \icode{B0} & \icode{B1} & \icode{B2} \\
+\icode{B3} & \icode{B4} & \icode{B5} & \icode{B6} & \icode{B7} & \icode{B8} & \icode{B9} & \icode{BA} & \icode{BB} & \icode{BC} & \icode{BD} & \icode{BE} & \icode{BF} & \icode{C0} & \icode{C1} & \icode{C2} & \icode{C3} \\
+\icode{C4} & \icode{C5} & \icode{C6} & \icode{C7} & \icode{C8} & \icode{C9} & \icode{CA} & \icode{CB} & \icode{CC} & \icode{CD} & \icode{CE} & \icode{CF} & \icode{D0} & \icode{D1} & \icode{D2} & \icode{D3} & \icode{D4} \\
+\icode{D5} & \icode{D6} & \icode{D7} & \icode{D8} & \icode{D9} & \icode{DA} & \icode{DB} & \icode{DC} & \icode{DD} & \icode{DE} & \icode{DF} & \icode{E0} & \icode{E1} & \icode{E2} & \icode{E3} & \icode{E4} & \icode{E5} \\
+\icode{E6} & \icode{E7} & \icode{E8} & \icode{E9} & \icode{EA} & \icode{EB} & \icode{EC} & \icode{ED} & \icode{EE} & \icode{EF} & \icode{F0} & \icode{F1} & \icode{F2} & \icode{F3} & \icode{F4} & \icode{F5} & \icode{F6} \\
+\icode{F7} & \icode{F8} & \icode{F9} & \icode{FA} & \icode{FB} & \icode{FC} & \icode{FD} & \icode{FE} & \icode{FF} & \icode{01} & \icode{00} & \icode{08} & \icode{FF} & \icode{BF} & \icode{00} & \icode{00} & \icode{01} \\
+\icode{02} & \icode{CA} & \icode{00} \\
 						  };
 
       \end{tikzpicture}
