--- a/src/planets.tex
+++ b/src/planets.tex
@@ -287,7 +287,7 @@ Picking a random number between 128 and 256 is slightly convoluted in assembly:
 \end{lstlisting}
 
 \begin{q}
-A Neat Little Trick?
+\textbf{A Neat Little Trick}
 
 \begin{lstlisting}[caption=Neat.]
 PutProceduralByteInAccumulatorRegister
