--- a/src/titlescreen/titlescreen_color_ram_stripes.tex
+++ b/src/titlescreen/titlescreen_color_ram_stripes.tex
@@ -289,56 +289,56 @@
               nodes={draw,minimum size=1cm,anchor=center},
               column sep=-\pgflinewidth,row sep=-\pgflinewidth,font=\huge]
               {
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 &
-02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 & 02 \\
-08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 &
-08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 & 08 \\
-07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 &
-07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 & 07 \\
-05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 &
-05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 & 05 \\
-0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E &
-0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E & 0E \\
-04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 &
-04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 & 04 \\
-06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 &
-06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 & 06 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 &
-01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 & 01 \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} &
+\icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} & \icode{02} \\
+\icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} &
+\icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} & \icode{08} \\
+\icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} &
+\icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} & \icode{07} \\
+\icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} &
+\icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} & \icode{05} \\
+\icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} &
+\icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} & \icode{0E} \\
+\icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} &
+\icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} & \icode{04} \\
+\icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} &
+\icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} & \icode{06} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} &
+\icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} & \icode{01} \\
               };
 
       \end{tikzpicture}
